fix route select alignment on schedule page

--- a/apps/site/web/static/css/_schedule.scss
+++ b/apps/site/web/static/css/_schedule.scss
@@ -4,7 +4,7 @@
 
 .form-control.schedule-route-selector {
   // leave room for the route icon
-  width: 79%;
+  max-width: 80%;
   float: left;
 }
 
